// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Dive Site component will render site with full details 1`] = `
"<div class="grid grid-cols-1 lg:grid-cols-2 gap-3">
  <div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Average rating:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-2" readonly="">5</div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Difficulty rating:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-2" readonly="">4.4</div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
  <div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Depth:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="fas fa-tachometer-alt fa-sm"></i></span><span>21.62 m</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Shore access:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="fas fa-anchor fa-sm"></i></span><span>Accessible from shore</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Free to dive:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="far fa-money-bill-alt fa-sm"></i></span><span>Free to dive</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label for="waterType"><span class="font-bold">Water type:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="fa-solid fa-droplet"></i></span><span>Fresh water</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="space-y-3">
    <h1 class="text-2xl font-bold font-title">Location</h1>
    <div class="flex gap-2 items-baseline">
      <p class="text-lg">Waldorf, ME, JO</p>
      <p class="ml-2"><span class="mr-1 text-danger"><i class="fas fa-map-marker-alt fa-sm"></i></span><span>72.6789, -105.3306</span></p>
    </div>
    <div class="mx-auto">
      <div class="w-full aspect-video"></div>
    </div>
  </div>
  <div class="space-y-3">
    <div>
      <h1 class="text-2xl font-bold font-title">Directions</h1>
      <p>Maiores natus doloribus laudantium at. Ducimus consectetur vitae quo deserunt doloremque consequuntur quibusdam quis. Beatae autem accusamus suscipit accusantium.</p>
    </div>
    <div>
      <h1 class="text-2xl font-bold font-title">Description</h1>
      <p>Possimus animi voluptate repellendus hic facilis dolorem. Animi natus perspiciatis ut voluptate velit eos vel nihil doloremque. Dolorem tenetur magnam maxime. Aut doloribus eveniet corporis.</p>
    </div>
    <div class="flex justify-evenly gap-6">
      <div class="space-y-0 mb-2 last:mb-4" responsive="false">
        <div><label><span class="font-bold">Created by:</span>
            <!--v-if-->
          </label></div>
        <div class="grow w-full pl-2"><a href="#" class="flex space-x-2 items-center">
            <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="24px" height="24px" alt="" src="https://ui-avatars.com/api/?name=Constance_Walker19">
              <!--v-if-->
            </p><span>@Constance_Walker19</span>
          </a>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div class="space-y-0 mb-2 last:mb-4" responsive="false">
        <div><label><span class="font-bold">Created:</span>
            <!--v-if-->
          </label></div>
        <div class="grow w-full pl-2"><span>4 years ago</span>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`View Dive Site component will render site with minimal details 1`] = `
"<div class="grid grid-cols-1 lg:grid-cols-2 gap-3">
  <div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div>
    <!--v-if-->
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Shore access:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="fas fa-anchor fa-sm"></i></span><span>Unknown</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label><span class="font-bold">Free to dive:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="far fa-money-bill-alt fa-sm"></i></span><span>Unknown</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="space-y-0 mb-2 last:mb-4">
      <div><label for="waterType"><span class="font-bold">Water type:</span>
          <!--v-if-->
        </label></div>
      <div class="grow w-full pl-2">
        <div class="mt-1.5"><span class="mr-1"><i class="fa-solid fa-droplet"></i></span><span>Unknown</span></div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="space-y-3">
    <h1 class="text-2xl font-bold font-title">Location</h1>
    <div class="flex gap-2 items-baseline">
      <p class="text-lg">Hudsonstad, NV, HM</p>
      <p class="ml-2"><span class="mr-1 text-danger"><i class="fas fa-map-marker-alt fa-sm"></i></span>
        <!--v-if-->
      </p>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
